diseño de inicio de sesión completado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    
+    <div class="imgFondo"></div>
      <div class="logoH2C">
     <img src="img/LOLOL 2.png" class="img-fluid" alt="logo H2C">
 </div>
@@ -19,6 +21,7 @@
     <h3>Bienvenido a tu soporte de ayuda</h3>
     <h5>Gracias por preferirnos</h5>
 </div>
+<div class="imgFondo2"></div>
 
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
