--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <title>Pantalla de carga</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
-<body>
-    
-    <div class="imgFondo"></div>
-     <div class="logoH2C">
-    <img src="img/LOLOL 2.png" class="img-fluid" alt="logo H2C">
-</div>
 
-<div class="msg">
-    <h3>Bienvenido a tu soporte de ayuda</h3>
-    <h5>Gracias por preferirnos</h5>
-</div>
-<div class="imgFondo2"></div>
+<body class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
+
+    <div class="imgFondo"></div>
+    <div class="imgFondo2"></div>
+
+
+    <div class="container text-center">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-12 col-md-12 text-center">
+
+                <div class="logoH2C">
+                    <img src="img/LOLOL 2.png" class="img-fluid" alt="logo H2C">
+                </div>
+
+                <div class="msg">
+                    <h3>Bienvenido a tu soporte de ayuda</h3>
+                    <h5>Gracias por preferirnos</h5>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 
     <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
