--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -37,86 +37,72 @@
             </div>
         </div>
 
-        <div class="container mt-4 ">
-            <div class="container text-center">
+        <div class="container mt-4 text-center">
                 <div class="row justify-content-center">
                     <div class="col-12 col-sm-12 col-md-12 custom-form-column ">
                         <div class="inputs">
-                            <div class="user">
-                                <form class="formUser">
-                                    <input type="text" required>
+                            <form class="formLogin">
+                                <div class="formUser">
+                                    <input type="text" name="usuario" required>
                                     <label class="lblUser">
                                         <span class="text-User">Usuario</span>
                                     </label>
-                                </form>
-                            </div>
+                                </div>
 
-                            <div class="password">
-                                <form class="formPassword">
-                                    <input type="text" required>
+                                <div class="formPassword mt-4">
+                                    <input type="password" name="password" required>
                                     <label class="lblPassword">
                                         <span class="text-Password">Contraseña</span>
                                         <i class="eye-icon fa-solid fa-eye"></i>
                                     </label>
-                                </form>
-                            </div>
+                                </div>
+
+                                <div class="row mt-3">
+                                    <div class="col-6">
+                                        <label class="checkbox">
+                                            <input type="checkbox" name="remember">
+                                            <span class="checkMark"></span>
+                                            Recuérdame
+                                        </label>
+                                    </div>
+                                    <div class="col-6 text-end">
+                                        <div class="link">
+                                            <a href="#">¿Olvidaste tu contraseña?</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="btn-enter mt-5  mb-3 w-100">
+                                    <button class=" w-100">
+                                        <img src="img/Google-Symbol.png" alt="logoGoogle">
+                                        Iniciar sesión con Google
+                                    </button>
+                                </div>
+
+                                <div class="btn-google w-100">
+                                    <button type="submit">Iniciar sesión</button>
+                                </div>
+
+                                <div class="singIn">
+                                    <p>¿Todavía no tienes una cuenta?</p>
+                                    <a href="#">Registrate</a>
+                                </div>
+
+                            </form>
                         </div>
                     </div>
                 </div>
-            </div>
+            
         </div>
 
 
-        <div class="container form-left-aligned mt-4">
-            <div class="row">
-                <div class=" col-5 col-lg-5 col-sm-5 col-md-5 ms-3">
-                    <div class="RememberMe">
-                        <label class="checkbox">
-                            <input type="checkbox">
-                            <span class="checkMark"></span>
-                            Recuerdame
-                        </label>
-                    </div>
-                </div>
-                <div class="col-5 col-lg-5 col-sm-5 col-md-5 offset-1">
-                    <div class="link ">
-                        <a href="#">¿Olvidaste tu contraseña?</a>
-                    </div>
-                </div>
 
-            </div>
-
-        </div>
-
-        <div class="container text-center">
-            <div class="row justify-content-center  custom-form-column mt-5">
-                <div class="div class= col-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="buttons w-100">
-                        <button class="buttons w-100">
-                            <img src="img/Google-Symbol.png" alt="logoGoogle">
-                            Iniciar sesión con google
-                            
-                        </button>
-                    </div>
-
-                    <div class="buttons2">
-                        <button>Iniciar sesión</button>
-                    </div>
-
-                    <div class="singIn">
-                        <p>¿Todavía no tienes una cuenta?</p>
-                        <a href="#">Registrate</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
 
     </div>
 
 
-    </div>
 
     <script src="js/scriptInicioSesion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
