--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -23,7 +23,7 @@
 
     <div class="page-content-wrapper d-flex flex-column align-items-center" style="min-height: 100vh;">
         <div class="container text-center">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center  align-self-stretch">
                 <div class="col-12 col-sm-12 col-md-12">
                     <div class="logoH2C">
                         <img src="img/H2C_LOGO_WHITE 3.svg" class="img-fluid" alt="logo H2C">
@@ -38,61 +38,61 @@
         </div>
 
         <div class="container mt-4 text-center">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-sm-12 col-md-12 custom-form-column ">
-                        <div class="inputs">
-                            <form class="formLogin">
-                                <div class="formUser">
-                                    <input type="text" name="usuario" required>
-                                    <label class="lblUser">
-                                        <span class="text-User">Usuario</span>
+            <div class="row justify-content-center align-self-stretch ms-1 me-1">
+                <div class="col-12 col-sm-12 col-md-12 custom-form-column ">
+                    <div class="inputs">
+                        <form class="formLogin">
+                            <div class="formUser">
+                                <input type="text" name="usuario" required>
+                                <label class="lblUser">
+                                    <span class="text-User">Usuario</span>
+                                </label>
+                            </div>
+
+                            <div class="formPassword mt-4">
+                                <input type="password" name="password" required>
+                                <label class="lblPassword">
+                                    <span class="text-Password">Contraseña</span>
+                                    <i class="eye-icon fa-solid fa-eye"></i>
+                                </label>
+                            </div>
+
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <label class="checkbox">
+                                        <input type="checkbox" name="remember">
+                                        <span class="checkMark"></span>
+                                        Recuérdame
                                     </label>
                                 </div>
-
-                                <div class="formPassword mt-4">
-                                    <input type="password" name="password" required>
-                                    <label class="lblPassword">
-                                        <span class="text-Password">Contraseña</span>
-                                        <i class="eye-icon fa-solid fa-eye"></i>
-                                    </label>
-                                </div>
-
-                                <div class="row mt-3">
-                                    <div class="col-6">
-                                        <label class="checkbox">
-                                            <input type="checkbox" name="remember">
-                                            <span class="checkMark"></span>
-                                            Recuérdame
-                                        </label>
-                                    </div>
-                                    <div class="col-6 text-end">
-                                        <div class="link">
-                                            <a href="#">¿Olvidaste tu contraseña?</a>
-                                        </div>
+                                <div class="col-6 text-end">
+                                    <div class="link">
+                                        <a href="#">¿Olvidaste tu contraseña?</a>
                                     </div>
                                 </div>
+                            </div>
 
-                                <div class="btn-enter mt-5  mb-3 w-100">
-                                    <button class=" w-100">
-                                        <img src="img/Google-Symbol.png" alt="logoGoogle">
-                                        Iniciar sesión con Google
-                                    </button>
-                                </div>
+                            <div class="btn-google mt-5  mb-3 w-100">
+                                <button class=" w-100">
+                                    <img src="img/Google-Symbol.png" alt="logoGoogle">
+                                    Iniciar sesión con Google
+                                </button>
+                            </div>
 
-                                <div class="btn-google w-100">
-                                    <button type="submit">Iniciar sesión</button>
-                                </div>
+                            <div class="btn-enter w-100">
+                                <button type="submit">Iniciar sesión</button>
+                            </div>
 
-                                <div class="singIn">
-                                    <p>¿Todavía no tienes una cuenta?</p>
-                                    <a href="#">Registrate</a>
-                                </div>
+                            <div class="singIn">
+                                <p>¿Todavía no tienes una cuenta?</p>
+                                <a href="registrarse.html">Registrate</a>
+                            </div>
 
-                            </form>
-                        </div>
+                        </form>
                     </div>
                 </div>
-            
+            </div>
+
         </div>
 
 
