--- a/registrarse.html
+++ b/registrarse.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registrarse</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/registrarse.css">
@@ -20,80 +20,86 @@
 <body>
     <div class="imgFondo"></div>
 
+
     <div class="page-content-wrapper d-flex flex-column align-items-center" style="min-height: 100vh;">
-
-        <div class="row text-center align-self-stretch">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="welcome">
-                    <h5>Bienvenido/a</h5>
-                    <p>Estamos emocionados portenerte aquí</p>
+        <div class="container">
+            <div class="row text-center align-self-stretch">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="welcome">
+                        <h5>Bienvenido/a</h5>
+                        <p>Estamos emocionados portenerte aquí</p>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="row text-start align-self-stretch ms-3 me-3 mt-5">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="inputs">
-                    <form class="frmLogin">
-                        <div class="formUser">
-                            <input type="text" name="usuario" required>
-                            <label class="lblUser">
-                                <span class="text-User">Usuario</span>
-                            </label>
-                        </div>
 
-                        <div class="formEmail mt-5">
-                            <input type="text" name="email" required>
-                            <label class="lblEmail">
-                                <span class="text-Email">Correo electrónico</span>
-                            </label>
-                        </div>
 
-                        <div class="formPassword mt-4">
-                            <input type="password" name="password" required>
-                            <label class="lblPassword">
-                                <span class="text-Password">Contraseña</span>
-                                <i class="eye-icon fa-solid fa-eye"></i>
-                            </label>
-                        </div>
-
-                        <div class="formPhone mt-4">
-                            <h5 class="phone-label-static">Número de teléfono</h5>
-                            <div class="input-group"> <span class="input-group-text country-code-prefix">
-                                    <span class="iconify flag-icon" data-icon="flag:sv-4x3"></span>
-                                    +503
-                                </span>
-                                <input type="tel" name="phone" class="form-control" required>
+        <div class="container-fluid text-center">
+            <div class="row text-center  text-start  mt-5 ms-1  me-1">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 ">
+                    <div class="inputs">
+                        <form class="frmLogin">
+                            <div class="formUser">
+                                <input type="text" name="usuario" required>
+                                <label class="lblUser">
+                                    <span class="text-User">Usuario</span>
+                                </label>
                             </div>
+
+
+                            <div class="formEmail mt-5">
+                                <input type="text" name="email" required>
+                                <label class="lblEmail">
+                                    <span class="text-Email">Correo electrónico</span>
+                                </label>
+                            </div>
+
+                            <div class="formPassword mt-4">
+                                <input type="password" name="password" required>
+                                <label class="lblPassword">
+                                    <span class="text-Password">Contraseña</span>
+                                    <i class="eye-icon fa-solid fa-eye"></i>
+                                </label>
+                            </div>
+
+                            <div class="formPhone mt-4 text-start">
+                                <h5 class="phone-label-static">Número de teléfono</h5>
+                                <div class="input-group"> <span class="input-group-text country-code-prefix">
+                                        <span class="iconify flag-icon" data-icon="flag:sv-4x3"></span>
+                                        +503
+                                    </span>
+                                    <input type="tel" name="phone" class="form-control" required>
+                                </div>
+                            </div>
+
+                            <div class="btn-enter mt-5  mb-3 w-100">
+                                <button type="submit">Iniciar sesión</button>
+                            </div>
+
+                            <div class="d-flex align-items-center justify-content-center  my-4">
+                                <div class="border-top mx-2"></div>
+                                <span class="txtRegistro"> Ó registrate con </span>
+                                <div class="border-top mx-2"></div>
+                            </div>
+                        </form>
+
+                        <div class="btn-google mb-3 w-100">
+                            <button class=" w-100">
+                                <img src="img/Google-Symbol.png" alt="logoGoogle">
+                                Iniciar sesión con Google
+                            </button>
                         </div>
 
-                        <div class="btn-enter mt-5  mb-3 w-100">
-                            <button type="submit">Iniciar sesión</button>
+                        <div class="txtInfo text-center mt-5">
+                            <p>¿Ya tienes una cuenta?</p>
+                            <a href="inicioSesion.html">Iniciar sesión</a>
                         </div>
 
-                        <div class="d-flex align-items-center justify-content-center  my-4">
-                            <div class="border-top mx-1"></div>
-                            <span class="txtRegistro"> Ó registrate con </span>
-                            <div class="border-top mx-2"></div>
-                        </div>
-                    </form>
-
-                    <div class="btn-google mb-3 w-100">
-                        <button class=" w-100">
-                            <img src="img/Google-Symbol.png" alt="logoGoogle">
-                            Iniciar sesión con Google
-                        </button>
                     </div>
-
-                    <div class="txtInfo text-center mt-5">
-                        <p>¿Ya tienes una cuenta?</p>
-                        <a href="inicioSesion.html">Iniciar sesión</a>
-                    </div>
-
                 </div>
             </div>
         </div>
-
 
     </div>
 
