--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,14 @@
 
         
     </div>
+
+    <div class="menu">
+        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/notificaciones_active.png" alt=""></a>
+        <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="js/dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
