--- a/dashboard.html
+++ b/dashboard.html
@@ -63,11 +63,15 @@
         
     </div>
 
+    <button id="btnAgregar" class="add-btn">
+        <a href="crearTicket.html"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg></a>
+    </button>
+
     <div class="menu">
         <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/notificaciones_active.png" alt=""></a>
+        <a href="#"><img src="img/menu/dashboard_activo.png" alt=""></a>
+        <a href="#"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
         <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
