--- a/crearTicket.html
+++ b/crearTicket.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear ticket</title>
+    <link rel="stylesheet" href="css/crearTicket.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
+
 <body>
-    
+    <div class="imgFondo"></div>
+
+    <div class="container-fluid  text-white py-3">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-auto">
+                <div class="flecha-atras">
+                    <a href="dashboard.html"><i class="fas fa-arrow-left fa-lg"></i></a>
+                </div>
+            </div>
+            <div class="col text-center">
+                <h4 class="mb-0">Crear ticket</h4>
+            </div>
+            <div class="col-auto">
+                <img src="img/icon_ticket.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="white-content-section">
+        <div class="container">
+            <div class="form-section-padding">
+                <div class="mb-5">
+                    <label for="tituloTicket" class="form-label fw-bold">Título del ticket</label>
+                    <input type="text" class="form-control" id="tituloTicket"
+                        placeholder="Coloca un título a tu problema">
+                </div>
+
+                <div class="mb-5">
+                    <label for="categoria" class="form-label fw-bold">Categoría</label>
+                    <select class="form-select" id="categoria">
+                        <option selected>Selecciona la categoría</option>
+                        <option value="1">Soporte Técnico</option>
+                        <option value="2">Consulta General</option>
+                        <option value="3">Problema de Facturación</option>
+                    </select>
+                </div>
+
+                <div class="mb-5">
+                    <label class="form-label fw-bold">Prioridad</label>
+                    <div class="row row-cols-2 g-2" id="prioridad-buttons-container">
+                        <div class="col d-flex justify-content-center">
+                            <button type="button" class="btn btn-prioridad mt-2 mb-2">Baja</button>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                            <button type="button" class="btn btn-prioridad mt-2 mb-2">Media</button>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                            <button type="button" class="btn btn-prioridad mt-2 mb-2">Alta</button>
+                        </div>
+                        <div class="col d-flex justify-content-center">
+                            <button type="button" class="btn btn-prioridad mt-2 mb-2">Crítica</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="mb-5">
+                    <label for="descripcion" class="form-label visually-hidden">Descripción</label>
+                    <textarea class="form-control" id="descripcion" rows="5" placeholder="Descripción"></textarea>
+                </div>
+
+                <div class="mb-5">
+                    <label for="formFile" class="form-label fw-bold">Subir una imagen</label>
+                    <input class="form-control visually-hidden" type="file" id="formFile">
+                    <button type="button" class="btn btn-link text-decoration-none p-0" id="uploadButton">
+                        <i class="fas fa-upload fa-lg"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="menu">
+        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/dashboard_activo.png" alt=""></a>
+        <a href="#"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
+    </div>
+
+
+    <script src="js/crearTicket.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
