apartado de registrar corregido

--- a/registrarse.html
+++ b/registrarse.html
@@ -40,26 +40,24 @@
                 <div class="col-12 col-sm-12 col-md-12 col-lg-12 ">
                     <div class="inputs">
                         <form class="frmLogin">
-                            <div class="formUser">
+                            <div class="formName">
+                                <input type="text" name="name" required>
+                                <label class="lblName">
+                                    <span class="text-Name">Nombre completo</span>
+                                </label>
+                            </div>
+
+                            <div class="formUser mt-5">
                                 <input type="text" name="usuario" required>
                                 <label class="lblUser">
                                     <span class="text-User">Usuario</span>
                                 </label>
                             </div>
 
-
                             <div class="formEmail mt-5">
                                 <input type="text" name="email" required>
                                 <label class="lblEmail">
                                     <span class="text-Email">Correo electrónico</span>
-                                </label>
-                            </div>
-
-                            <div class="formPassword mt-4">
-                                <input type="password" name="password" required>
-                                <label class="lblPassword">
-                                    <span class="text-Password">Contraseña</span>
-                                    <i class="eye-icon fa-solid fa-eye"></i>
                                 </label>
                             </div>
 
@@ -74,7 +72,7 @@
                             </div>
 
                             <div class="btn-enter mt-5  mb-3 w-100">
-                                <button type="submit">Iniciar sesión</button>
+                                <button type="submit">Registrarse</button>
                             </div>
 
                             <div class="d-flex align-items-center justify-content-center  my-4">
@@ -87,11 +85,11 @@
                         <div class="btn-google mb-3 w-100">
                             <button class=" w-100">
                                 <img src="img/Google-Symbol.png" alt="logoGoogle">
-                                Iniciar sesión con Google
+                                Registrarse con Google
                             </button>
                         </div>
 
-                        <div class="txtInfo text-center mt-5">
+                        <div class="txtInfo text-center mt-3">
                             <p>¿Ya tienes una cuenta?</p>
                             <a href="inicioSesion.html">Iniciar sesión</a>
                         </div>
