--- a/calendario.html
+++ b/calendario.html
@@ -32,8 +32,8 @@
                     <div class="caret"></div>
                 </div>
                 <ul class="menudropdown">
-                    <li class="active">Creación</li>
-                    <li>Cierre</li>
+                    <li class="active" id="creacion">Creación</li>
+                    <li id="cierre">Cierre</li>
                 </ul>
             </div>
         </div>
@@ -68,7 +68,7 @@
             </div> 
             <div class="prioridad">
                 <p>Prioridad:</p>
-                <p>Media</p>
+                <p class="prioridad-color">Media</p>
             </div>
             <div class="iconos">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
