actualizacion de creacion de tickets

--- a/crearTicket.html
+++ b/crearTicket.html
@@ -108,8 +108,18 @@
         <div class="custom-modal-content">
             <span class="custom-close-button">&times;</span>
             
-            <p>Este es el primer texto dentro de tu modal personalizado.</p>
-            <p>Este es el segundo texto que puedes modificar.</p>
+            <div>
+                <button type="button" onclick="">
+                    <img src="img/iconGaleria.png" alt="Descripción de la imagen">
+                  </button>
+                <p>Subir imagen</p>
+            </div>
+            <div>
+                <button type="button" onclick="">
+                    <img src="img/iconFoto.png" alt=""></button>
+                <p>Tomar foto</p>
+            </div>
+            
         </div>
     </div>
 
