modales de subir fotos agregado

--- a/crearTicket.html
+++ b/crearTicket.html
@@ -78,11 +78,6 @@
                 </div>
 
                 <div class="mb-5">
-                    <label for="descripcion" class="form-label visually-hidden">Descripción</label>
-                    <textarea class="form-control" id="descripcion" rows="5" placeholder="Descripción"></textarea>
-                </div>
-
-                <div class="mb-5">
                     <label class="form-label fw-bold">Subir una imagen</label>
                     <button type="button" class="btn btn-link text-decoration-none p-0" id="openCustomModal">
                         <i class="fas fa-upload fa-lg"></i>
@@ -117,7 +112,7 @@
             <div>
                 <button type="button" onclick="">
                     <img src="img/iconFoto.png" alt=""></button>
-                <p>Tomar foto</p>
+                <p>Tomar imagen</p>
             </div>
             
         </div>
