--- a/ticketsDashboard.html
+++ b/ticketsDashboard.html
@@ -24,9 +24,9 @@
       </div>
     </div>
   </header>
-
+ 
   <div class="imgFondo"></div>
-
+ 
   <div class="container mt-3">
     <div class="ticketsFilter">
       <div class="row text-center g-0">
@@ -37,25 +37,28 @@
       </div>
     </div>
   </div>
-
+ 
   <main>
     <div class="row">
       <div class="col-auto textTicket">
         <strong><p>Tickets Pendientes</p></strong>
       </div>
     </div>
-
+ 
     <div class="row gx-0">
       <div class="col-12">
-        <div class="card mx-auto" style="width: 90%;">
+        <div class="card mx-auto" style="width: 97%;">
           <div class="card-body">
             <div class="d-flex flex-wrap align-items-start ticket-row">
               <div class="ticket-col1">
                 <div class="idText"><strong><p>01</p></strong></div>
-                <div class="date"><p>Abr,25</p></div>
+                <div class="date"><strong><p>Abr,25</p></strong></div>
               </div>
               <div class="ticket-col2">
-                <div class="someFunctionsText"><p>No funcionan los filtros</p></div>
+                <div class="description"><p>No funcionan los filtros</p></div>
+                <div class="id">
+                  <p>#0001</p>
+                </div>
               </div>
               <div class="ticket-col3"><!-- Vacío por ahora --></div>
             </div>
@@ -63,8 +66,77 @@
         </div>
       </div>
     </div>
+    <div class="row gx-0">
+      <div class="col-12">
+        <div class="card mx-auto" style="width: 97%;">
+          <div class="card-body">
+            <div class="d-flex flex-wrap align-items-start ticket-row">
+              <div class="ticket-col1">
+                <div class="idText"><strong><p>01</p></strong></div>
+                <div class="date"><strong><p>Abr,25</p></strong></div>
+              </div>
+              <div class="ticket-col2">
+                <div class="description"><p>No funcionan los filtros</p></div>
+                <div class="id">
+                  <p>#0001</p>
+                </div>
+                <div class="TicketStatus">
+                <span class="badge bg-danger">Pendiente</span>
+                </div>
+              </div>
+              <div class="ticket-col3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 21q-3.15 0-5.575-1.912T3.275 14.2q-.1-.375.15-.687t.675-.363q.4-.05.725.15t.45.6q.6 2.25 2.475 3.675T12 19q2.925 0 4.963-2.037T19 12t-2.037-4.962T12 5q-1.725 0-3.225.8T6.25 8H8q.425 0 .713.288T9 9t-.288.713T8 10H4q-.425 0-.712-.288T3 9V5q0-.425.288-.712T4 4t.713.288T5 5v1.35q1.275-1.6 3.113-2.475T12 3q1.875 0 3.513.713t2.85 1.924t1.925 2.85T21 12t-.712 3.513t-1.925 2.85t-2.85 1.925T12 21m1-9.4l2.5 2.5q.275.275.275.7t-.275.7t-.7.275t-.7-.275l-2.8-2.8q-.15-.15-.225-.337T11 11.975V8q0-.425.288-.712T12 7t.713.288T13 8z"/></svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row gx-0">
+      <div class="col-12">
+        <div class="card mx-auto" style="width: 97%;">
+          <div class="card-body">
+            <div class="d-flex flex-wrap align-items-start ticket-row">
+              <div class="ticket-col1">
+                <div class="idText"><strong><p>01</p></strong></div>
+                <div class="date"><strong><p>Abr,25</p></strong></div>
+              </div>
+              <div class="ticket-col2">
+                <div class="description"><p>No funcionan los filtros</p></div>
+                <div class="id">
+                  <p>#0001</p>
+                </div>
+              </div>
+              <div class="ticket-col3"><!-- Vacío por ahora --></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row gx-0">
+      <div class="col-12">
+        <div class="card mx-auto" style="width: 97%;">
+          <div class="card-body">
+            <div class="d-flex flex-wrap align-items-start ticket-row">
+              <div class="ticket-col1">
+                <div class="idText"><strong><p>01</p></strong></div>
+                <div class="date"><strong><p>Abr,25</p></strong></div>
+              </div>
+              <div class="ticket-col2">
+                <div class="description"><p>No funcionan los filtros</p></div>
+                <div class="id">
+                  <p>#0001</p>
+                </div>
+              </div>
+              <div class="ticket-col3"><!-- Vacío por ahora --></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
   </main>
-
+ 
   <script src="js/ticketsDashboard.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
