Avance vista de perfil 2

--- a/perfil.html
+++ b/perfil.html
@@ -111,9 +111,11 @@
         <h3>Editar nombre de usuario</h3>
       </header>
       <form id="frmEditarUsuario">
-                <input type="text" id="username" required>
-                <button type="button" class="contrast" id="btnCancelar">Cancelar</button>
-                <button type="submit" class="contrast" id="btnGuardar">Guardar</button>
+                <input class="input" type="text" id="username" required>
+                <div class="acciones">
+<button type="button" class="cancelar" id="btnCancelar">Cancelar</button>
+                <button type="submit" class="confirmar" id="btnGuardar">Guardar</button>
+                </div>
             </form>
     </article>
   </dialog>
