--- a/notificaciones.html
+++ b/notificaciones.html
@@ -31,9 +31,9 @@
     <div class="menu">
         <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/notificaciones_active.png" alt=""></a>
-        <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificaciones_active.png" alt=""></a>
+        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
 
     <script src="js/scriptNotificaciones.js"></script>
