--- a/dashboard.html
+++ b/dashboard.html
@@ -70,9 +70,9 @@
     <div class="menu">
         <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/dashboard_activo.png" alt=""></a>
-        <a href="#"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
-        <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="js/dashboard.js"></script>
