Avance base de conocimientos

--- a/baseConocimiento.html
+++ b/baseConocimiento.html
@@ -35,13 +35,30 @@
 
         </div>
     </div>
-    <div class="contenido">
-        <div class="tarjeta">
-            <h5>Configuracion de impresora a la red</h5>
-            <p>Guía paso a paso para instalar y conectar impresoras</p>
-            <p class="leer-mas">Leer más</p>
-        </div>
+    <div class="contenido" id="contenido">
+        <!--Tarjetas de artículos inyectadas por JS-->
     </div>
+
+    <dialog id="modal">
+        <article>
+            <header>
+                <div class="modal-titulo">
+                    <img src="img/flechaIzquierda.png" alt="" id="flechaIzquierda">
+                    <h3>Configuración de impresora a la red</h3>
+                </div>
+                <div class="modal-datos">
+                    <p>Redactado por: Fernando Velásquez</p>
+                    <p>Fecha: 18/07/2025</p>
+                </div>
+            </header>
+            <div class="modal-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, iure. Laboriosam cumque hic facilis rerum! Incidunt qui in illum facere repellendus quis magni tempore, amet iste provident enim. Aliquam, possimus!
+                Error praesentium quas dolor fugiat labore ipsa cupiditate repellat nam temporibus? Sapiente eos nulla voluptatem consequuntur praesentium cupiditate animi! Quis numquam accusamus temporibus. Nisi, asperiores libero aut et tempore explicabo.
+                Inventore ad recusandae voluptatum, quibusdam ullam veritatis quisquam nemo in porro fugit, cupiditate minima autem dolorem earum, praesentium sit atque ducimus maiores ratione non fugiat. Pariatur, quo. Rem, eius minima!
+                Perspiciatis voluptates, architecto tenetur exercitationem obcaecati atque voluptatum error commodi mollitia tempora saepe reiciendis molestiae consectetur doloribus delectus quos ratione quasi odit? Accusantium, provident doloribus dolorum doloremque fugiat quisquam sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit soluta fuga pariatur dignissimos voluptatem, neque vero quod cumque placeat dolor nemo dolorum possimus asperiores provident, harum repellendus ad minus odit?</p>
+            </div>
+        </article>
+    </dialog>
 
     <div class="menu">
         <a href="#"><img src="img/menu/baseconocimiento_active.png" alt=""></a>
