apartado dashboard de tecnico avanzado

--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -41,14 +41,14 @@
                         
                         <form class="formLogin">
                             <div class="formUser">
-                                <input type="text" name="usuario" required>
+                                <input type="text" id="username" required>
                                 <label class="lblUser">
                                     <span class="text-User">Usuario</span>
                                 </label>
                             </div>
 
                             <div class="formPassword mt-4">
-                                <input type="password" name="password" required>
+                                <input type="password" id="password" required>
                                 <label class="lblPassword">
                                     <span class="text-Password">Contraseña</span>
                                     <i class="eye-icon fa-solid fa-eye"></i>
