Apartado de tecnico agregado

--- a/TicketAuditory.html
+++ b/TicketAuditory.html
@@ -17,7 +17,7 @@
     <div class="row align-items-center">
       <!-- Columna para botón de volver -->
       <div class="col-auto">
-        <img class="back" src="img/Left.png" alt="">
+        <a href="ticketsDashboard.html"><img class="back" src="img/Left.png" alt=""></a>
       </div>
 
       <!-- Columna para el título centrado -->
