--- a/crearTicket.html
+++ b/crearTicket.html
@@ -104,11 +104,11 @@
         </div>
 
         <div class="menu">
-            <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt="Base de conocimiento"></a>
-            <a href="#"><img src="img/menu/tickets_inactive.png" alt="Tickets"></a>
-            <a href="#"><img src="img/menu/dashboard_activo.png" alt="Dashboard"></a>
-            <a href="#"><img src="img/menu/notificationes_inactivo.png" alt="Notificaciones"></a>
-            <a href="#"><img src="img/menu/perfil_inactive.png" alt="Perfil"></a>
+            <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt="Base de conocimiento"></a>
+            <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt="Tickets"></a>
+            <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt="Dashboard"></a>
+            <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt="Notificaciones"></a>
+            <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt="Perfil"></a>
         </div>
 
 
