--- a/dashboardTech.html
+++ b/dashboardTech.html
@@ -69,10 +69,10 @@
 
     <div class="menu">
         <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboardTech.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
+        <a href="notificacionesTech.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="js/dashboardTech.js"></script>
