--- a/notificacionesTech.html
+++ b/notificacionesTech.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/styleNotificaciones.css">
+    <link rel="stylesheet" href="css/styleNotificacionesTech.css">
 </head>
 
 <body>
     <div class="encabezado">
-        <img src="img/flechaIzquierda.png" alt="Flecha" class="flecha">
+        <a href="dashboardTech.html"><img src="img/flechaIzquierda.png" alt="Flecha" class="flecha"></a>
         <h1>Notificaciones</h1>
     </div>
 
@@ -30,13 +30,13 @@
 
     <div class="menu">
         <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificaciones_active.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificacionesTech.html"><img src="img/menu/notificaciones_active.png" alt=""></a>
+        <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
 
-    <script src="js/scriptNotificaciones.js"></script>
+    <script src="js/scriptNotificacionesTech.js"></script>
 </body>
 
 </html>
