--- a/baseConocimiento.html
+++ b/baseConocimiento.html
@@ -61,11 +61,11 @@
     </dialog>
 
     <div class="menu">
-        <a href="#"><img src="img/menu/baseconocimiento_active.png" alt=""></a>
-        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_active.png" alt=""></a>
+        <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
 
     <script src="js/scriptBaseConocimiento.js"></script>
