--- a/calendario.html
+++ b/calendario.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="encabezado">
-        <img src="img/flechaIzquierda.png" alt="Flecha" class="flecha">
+        <a href="ticketsDashboard.html"><img src="img/flechaIzquierda.png" alt="Flecha" class="flecha"></a>
         <h1>Calendario de tickets</h1>
     </div>
 
@@ -58,11 +58,11 @@
     </div>
 
     <div class="menu">
-        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/tickets_active.png" alt=""></a>
-        <a href="#"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="ticketsDashboard.html"><img src="img/menu/tickets_active.png" alt=""></a>
+        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="js/scriptCalendario.js">
 
