--- a/dashboard.html
+++ b/dashboard.html
@@ -57,7 +57,7 @@
     <div class="white-content-section">
         <div class="d-flex justify-content-between align-items-center ">
             <h4 class="mb-1">Mis tickets</h4>
-            <a href="#" class="text-decoration-none text-dark">Todos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg><i class="bi bi-chevron-right"></i></a>
+            <a href="ticketsDashboard.html" class="text-decoration-none text-dark">Todos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg><i class="bi bi-chevron-right"></i></a>
         </div>
 
         
@@ -68,7 +68,7 @@
     </button>
 
     <div class="menu">
-        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
         <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
         <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
