--- a/perfilTech.html
+++ b/perfilTech.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="css/stylePerfil.css" />
+  <link rel="stylesheet" href="css/stylePerfilTech.css" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <img src="img/fotoperfil.png" alt="" class="foto">
     <h3 id="nombre"></h3>
     <h5 id="rol"></h5>
-    <p>Tickets generados: 9</p>
+    <p>Tickets resueltos: 9</p>
   </div>
   <div class="contenido">
     <div class="tarjeta">
@@ -123,13 +123,13 @@
 
   <div class="menu">
     <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-    <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
-    <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-    <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-    <a href="perfil.html"><img src="img/menu/perfil_active.png" alt=""></a>
+    <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
+    <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+    <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+    <a href="perfilTech.html"><img src="img/menu/perfil_active.png" alt=""></a>
   </div>
 
-  <script src="js/scriptPerfil.js"></script>
+  <script src="js/sciptPerfilTech.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
