--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/ticketsDashboard.css">
+  <link rel="stylesheet" href="css/ticketDashboardTech.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Tickets</title>
 </head>
@@ -56,13 +56,13 @@
 
   <div class="menu">
         <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="ticketsDashboard.html"><img src="img/menu/tickets_active.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_active.png" alt=""></a>
+        <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificacionesTech.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
  
-  <script src="js/ticketsDashboard.js"></script>
+  <script src="js/ticketDashboardTech.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
