cambios en area de tecnicos

--- a/baseConocimientoTech.html
+++ b/baseConocimientoTech.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="css/styleBaseConocimiento.css" />
+    <link rel="stylesheet" href="css/styleBaseConocimientoTech.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
@@ -38,13 +38,7 @@
     <div class="contenido" id="contenido">
         <!--Tarjetas de artículos inyectadas por JS-->
     </div>
-    <div class="final">
-        <img src="img/base_conocimiento_final.png" alt="">
-        <div class="texto-final">
-            <p>¿No encuentras respuesta a tu duda?</p>
-            <a href="crearTicket.html"><button>Ingresa un ticket</button></a>
-        </div>
-    </div>
+    
 
     <div id="modal" class="modal oculto">
         <div class="modal-content">
@@ -90,14 +84,14 @@
     </button>
 
     <div class="menu">
-        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_active.png" alt=""></a>
-        <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="baseConocimientoTech.html"><img src="img/menu/baseconocimiento_active.png" alt=""></a>
+        <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+        <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
 
-    <script src="js/scriptBaseConocimiento.js"></script>
+    <script src="js/scriptBaseConocimientoTech.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
