--- a/dashboardTech.html
+++ b/dashboardTech.html
@@ -57,18 +57,16 @@
     <div class="white-content-section">
         <div class="d-flex justify-content-between align-items-center ">
             <h4 class="mb-1">Mis tickets</h4>
-            <a href="#" class="text-decoration-none text-dark">Todos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg><i class="bi bi-chevron-right"></i></a>
+            <a href="ticketsDashboardTech.html" class="text-decoration-none text-dark">Todos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg><i class="bi bi-chevron-right"></i></a>
         </div>
 
         
     </div>
 
-    <button id="btnAgregar" class="add-btn">
-        <a href="crearTicket.html"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg></a>
-    </button>
+    
 
     <div class="menu">
-        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="baseConocimientoTech.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
         <a href="dashboardTech.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
         <a href="notificacionesTech.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
