--- a/notificacionesTech.html
+++ b/notificacionesTech.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="menu">
-        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="baseConocimientoTech.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
         <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
         <a href="notificacionesTech.html"><img src="img/menu/notificaciones_active.png" alt=""></a>
