arregle el menu al fin

--- a/baseConocimiento.html
+++ b/baseConocimiento.html
@@ -42,7 +42,7 @@
         <img src="img/base_conocimiento_final.png" alt="">
         <div class="texto-final">
             <p>¿No encuentras respuesta a tu duda?</p>
-            <a href="crearTicket.html"><button>Ingresa un ticket</button></a>
+            <a href="crearTicket.html"><button>Crea un ticket</button></a>
         </div>
     </div>
 
