--- a/notificaciones.html
+++ b/notificaciones.html
@@ -29,11 +29,11 @@
     </div>
 
     <div class="menu">
-        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="ticketsDashboard.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificaciones_active.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+        <a href="baseConocimiento.html" class="base"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="ticketsDashboard.html" class="ticket"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboard.html" class="dashboard"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+        <a href="notificaciones.html" class="notificacionicon"><img src="img/menu/notificaciones_active.png" alt=""></a>
+        <a href="perfil.html" class="perfil"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
 
     <script src="js/scriptNotificaciones.js"></script>
