base de conocimientos casi lista!!!!

--- a/baseConocimiento.html
+++ b/baseConocimiento.html
@@ -51,15 +51,16 @@
         </div>
     </div>
 
-    <div id="modal" class="modal oculto">
+    <div id="modal" class="kc-modal oculto">
         <div class="modal-content">
             <div class="modal-titulo">
                 <img src="img/flechaIzquierda.png" alt="" id="flechaIzquierda">
                 <h3></h3>
             </div>
             <div class="modal-datos">
-                <p></p>
-                <p></p>
+                <h4 id="modalCategory" style="color: #6A040F; font-size: 15px; margin-bottom: 1rem;"></h4>
+                <p id="modalAuthor"></p>
+                <p id="modalDate"></p>
             </div>
             <div class="modal-info">
                 <p></p>
