Mejora en creacion de ticket

--- a/crearTicket.html
+++ b/crearTicket.html
@@ -106,7 +106,7 @@
                         <img src="img/iconGaleria.png" alt="Subir desde la galería">
                     </button>
                     <p>Subir imagen</p>
-                    <input type="file" id="imageUploadInput" accept="image/*" multiple style="display:none" required>
+                    <input type="file" id="imageUploadInput" accept="image/*" multiple style="display:none">
                 </div>
                 <div>
                     <button type="button" id="takePictureBtn">
