Método de búsqueda funciona yay

--- a/baseConocimientoTech.html
+++ b/baseConocimientoTech.html
@@ -25,7 +25,7 @@
                 <h1 style="font-size: 24px; margin-top: 15px; margin-bottom: 15px;">Base de conocimiento</h1>
                 <div class="search-container">
                     <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Busca un artículo">
+                    <input type="text" placeholder="Busca un artículo" id="searchInput">
                 </div>
             </div>
             <div class="texto-encabezado">
