Base de conocimientos técnico terminada

--- a/baseConocimientoTech.html
+++ b/baseConocimientoTech.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <!-- Controles de paginación. Ahora están DENTRO del área de desplazamiento. -->
-            <nav aria-label="Navegación de soluciones" class="pagination-container">
+            <nav aria-label="Navegación de soluciones" class="pagination-container" id="pagination">
                 <button id="prev-page" class="pagination-arrow" disabled>
                     &leftarrow;
                 </button>
